# Orchard

./: AGENTS.md  task_tracker.md
cmake/: OrchardProject.cmake
src/: CMakeLists.txt
src/apfs-core/: CMakeLists.txt
src/apfs-core/src/: btree.cpp  compression.cpp  discovery.cpp  file_read.cpp  format.cpp  fs_keys.cpp  fs_records.cpp  inspection.cpp  object.cpp  omap.cpp  path_lookup.cpp  policy.cpp  probe.cpp  volume.cpp
src/blockio/: CMakeLists.txt
src/blockio/src/: error.cpp  reader.cpp
src/fs-winfsp/: CMakeLists.txt
src/fs-winfsp/src/: directory_query.cpp  file_info.cpp  filesystem.cpp  filesystem_stub.cpp  mount.cpp  path_bridge.cpp
src/mount-service/: CMakeLists.txt
src/mount-service/include/orchard/mount_service/: device_discovery.h  device_enumerator.h  device_inventory.h  device_monitor.h  mount_registry.h  rescan_coordinator.h  runtime.h  service_host.h  service_state.h  types.h
src/mount-service/src/: device_discovery.cpp  device_enumerator.cpp  device_inventory.cpp  device_monitor.cpp  main.cpp  mount_registry.cpp  rescan_coordinator.cpp  runtime.cpp  service_host.cpp  service_state.cpp  types.cpp
tests/corpus/: generate-sample-fixtures.ps1
tests/corpus/manifests/: sample-fixtures.json
tests/corpus/samples/: gpt-user-data.img  plain-user-data.img  sealed-system.img  snapshot-volume.img
tests/fuzz/: fuzz_smoke.cpp
tests/integration/: CMakeLists.txt  validate_orchard_inspect_output.cmake  validate_orchard_sealed_output.cmake  validate_orchard_snapshot_output.cmake
tests/unit/: CMakeLists.txt  apfs_tests.cpp  inspection_target_tests.cpp  mount_service_tests.cpp  reader_tests.cpp
tools/dev/: orchard-format.ps1  orchard-lint.ps1  orchard-service-console-smoke.ps1  orchard-service-smoke.ps1
tools/inspect/src/: main.cpp
(+21 files in other folders)
